# mmem

./: CMakeLists.txt  README.md  compile_commands.json  main.c
benchmarks/: arena.bench.csv  benchmarks.csv  calloc.bench.csv  malloc.bench.csv  pool_batched.bench.csv  pool_single.bench.csv
benchmarks/backups/: performance_test_01.tar
inc/: mmem.compiler.h  mmem.h
src/: mmem.c
